--- a/references.bib
+++ b/references.bib
@@ -437,6 +437,69 @@ doi = {10.1177/0956797609357751}
   publisher={Springer}
 }
 
+@article{saunders2020self,
+  title={From self (ie)-objectification to self-empowerment: The meaning of selfies on social media in eating disorder recovery},
+  author={Saunders, Jessica F and Eaton, Asia A and Aguilar, Sabrina},
+  journal={Computers in Human Behavior},
+  pages={106420},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{wollast2020cultural,
+  title={How cultural orientation and self-compassion shape objectified body consciousness for women from America, Belgium, Russia, and Thailand},
+  author={Wollast, Robin and Riemer, Abigail R and Gervais, Sarah J and Grigoryan, Lusine and Bernard, Philippe and Klein, Olivier},
+  journal={Self and Identity},
+  pages={1--21},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
+
+@article{morry2001magazine,
+  title={Magazine exposure: Internalization, self-objectification, eating attitudes, and body satisfaction in male and female university students.},
+  author={Morry, Marian M and Staska, Sandra L},
+  journal={Canadian Journal of Behavioural Science/Revue canadienne des sciences du comportement},
+  volume={33},
+  number={4},
+  pages={269},
+  year={2001},
+  publisher={Canadian Psychological Association}
+}
+
+@article{hill2008examining,
+  title={Examining objectification theory: Lesbian and heterosexual women's experiences with sexual-and self-objectification},
+  author={Hill, Melanie S and Fischer, Ann R},
+  journal={The Counseling Psychologist},
+  volume={36},
+  number={5},
+  pages={745--776},
+  year={2008},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{zurbriggen2011self,
+  title={Self-and partner-objectification in romantic relationships: Associations with media consumption and relationship satisfaction},
+  author={Zurbriggen, Eileen L and Ramsey, Laura R and Jaworski, Beth K},
+  journal={Sex roles},
+  volume={64},
+  number={7-8},
+  pages={449--462},
+  year={2011},
+  publisher={Springer}
+}
+
+@article{saez2019objectification,
+  title={Objectification in heterosexual romantic relationships: Examining relationship satisfaction of female objectification recipients and male objectifying perpetrators},
+  author={S{\'a}ez, Gemma and Riemer, Abigail R and Brock, Rebecca L and Gervais, Sarah J},
+  journal={Sex Roles},
+  volume={81},
+  number={5-6},
+  pages={370--384},
+  year={2019},
+  publisher={Springer}
+}
+
+
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
 
 @book{young1979, title={Proceedings of The Second Sex—Thirty Years Later: A Commemorative Conference on Feminist Theory,}, author={Young, Iris Marion}, year={1979}}
