added comments on intro

--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -66,7 +66,7 @@ library(lavaan)
 library(xtable)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link (CITE INTERPERSONAL PROCESS LINKS). For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
+@robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link (CITE INTERPERSONAL PROCESS LINKS LITERATURE). For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
 ##Self-Objectification
 Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level [@loughnan2015exploring] to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], which can lead to a state of self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [@fredrickson1998swimsuit, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
