--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -145,20 +145,21 @@ might be strongest from men, but possibly also from women. Psychological
 researchers studying the sexual objectification of women, and the
 resulting self-objectification that follows, have in recent years
 explored the interpersonal process of the objectification -
-self-objectification link. For example, in a face-to-face mixed-gender
-dyadic study, Garcia, Earnshaw, and Quinn (2016) found that men's
-reported objectification of their female interaction partner during an
-interaction was associated with increased self-objectification reported
-by their partner. Gervais, Sáez, Riemer, and Klein (2020) has reviewed
-the literature on interpersonal self-objectification and has organized
-the the process in a theoretical model called the SIMO, but this model
-is only relevant for mixed-gender encounters. Although there is ample
-evidence that women objectify other women (Loughnan et al., 2015a; Puvia
-\& Vaes, 2013), there is currently no studies investigating the process
-of interpersonal objectification same-gender interactions. Does
-objectification by a female interaction partner have the same downstream
-negative consequences as being objectified by a male interaction
-partner? For example, perhaps women could be amplifying each others'
+self-objectification link (CITE INTERPERSONAL PROCESS LINKS LITERATURE).
+For example, in a face-to-face mixed-gender dyadic study, Garcia,
+Earnshaw, and Quinn (2016) found that men's reported objectification of
+their female interaction partner during an interaction was associated
+with increased self-objectification reported by their partner. Gervais,
+Sáez, Riemer, and Klein (2020) has reviewed the literature on
+interpersonal self-objectification and has organized the the process in
+a theoretical model called the SIMO, but this model is only relevant for
+mixed-gender encounters. Although there is ample evidence that women
+objectify other women (Loughnan et al., 2015a; Puvia \& Vaes, 2013),
+there is currently no studies investigating the process of interpersonal
+objectification same-gender interactions. Does objectification by a
+female interaction partner have the same downstream negative
+consequences as being objectified by a male interaction partner? For
+example, perhaps women could be amplifying each others'
 self-objectification as they get ready to go out for the night,
 \emph{before} the theoretical encounters with men outlined in Gervais et
 al. (2020) occur.
@@ -174,18 +175,26 @@ well-being at the individual level (Calogero, Tantleff-Dunn, \&
 Thompson, 2011; Moradi \& Huang, 2008). Calogero et al. (2011) proposes
 that the construct of self-objectification can be conceptualized as a
 learned trait. Furthermore, it can also be elicited momentarily, through
-the media, for example, with sexualized images in movies and magazines,
-which can lead to a state of self-objectification (Bernard, Legrand, \&
-Klein, 2018; Calogero et al., 2011; Moradi \& Huang, 2008). Being
-objectified by another person and possessing trait-level
-self-objectification (TSO) may interact to influence experiences of
-feeling like a body, or state self-objectification (SSO) (B. L.
-Fredrickson, Roberts, Noll, Quinn, \& Twenge, 1998, Garcia et al.
-(2016)). Does this habit self-objectification lead women to also
-objectify other women, possibly to compare oneself?
+the media, for example, with sexualized images in movies and magazines
+(Morry \& Staska, 2001), which can lead to a state of
+self-objectification (Bernard, Legrand, \& Klein, 2018; Calogero et al.,
+2011; Moradi \& Huang, 2008). Being objectified by another person and
+possessing trait-level self-objectification (TSO) may interact to
+influence experiences of feeling like a body, or state
+self-objectification (SSO) (B. L. Fredrickson, Roberts, Noll, Quinn, \&
+Twenge, 1998, Garcia et al. (2016)). Does this habit
+self-objectification lead women to also objectify other women, possibly
+to compare oneself?
 
 \subsection{Women Objectifying Women}\label{women-objectifying-women}
 
+Past research has focused on men's objectifying behaviors, with little
+attention to the role that women may also play in enacting
+objectification of women. Hill and Fischer (2008) assessed women's
+experiences of objectification from men separately from women's
+experiences of objectification from women and found that women may be
+socialized not only to see themselves as objects but perhaps to see
+other women as objects as well (THEY DIDN'T DETERMINE THIS IN PERSON).
 Some studies have found that women objectify other women to a greater
 extent than they objectify men (Loughnan et al., 2015a). Women objectify
 (dehumanized) sexualized targets presented as images (Puvia \& Vaes,
@@ -196,7 +205,14 @@ with? What might be different for same-gender interactions? Harsey and
 Zurbriggen (2020) found that self-objectification was related to the
 objectification of women to a similar degree for men and women
 participants, although men scored high than women on a measure of belief
-that objectification of women is natural for men.
+that objectification of women is natural for men. ASK RANDI-WE KNOW
+OBJECTIFICATION HAS MORE ADVERSE CONSEQUENCES FOR WOMEN THAN MEN
+(Gervais, Vescio, \& Allen, 2011; Moradi \& Huang, 2008; Saguy, Quinn,
+Dovidio, \& Pratto, 2010)\ldots{}MENTION THAT\ldots{}HOWEVER DOES WOMEN
+OBJECT WOMEN TO A GREATER EXTENT THAN MEN MATTER MORE?\ldots{}STILL
+TRYING TO FIGURE THAT OUT? ADDITIONALLY Strelan and Hargreaves (2005)
+FOUND THAT THE MORE WOMEN SELF-OBJECTIFY, THE MORE THEY OBJECTIFY OTHER
+WOMEN.
 
 \subsection{Interpersonal
 Objectification}\label{interpersonal-objectification}
@@ -219,24 +235,28 @@ prime among women (Sanchez \& Broccoli, 2008) because in our culture
 women need to look attractive to obtain and maintain successful
 relationship, thus, the ``college relationships condition may heighten
 self-objectification and the evaluation of other women in a sexualized
-way. Researchers have also studied interpersonal objectification and
-self-objectification in romantic relationships (Strelan \& Pagoudis,
-2018). Evidence is mixed, and women can sometimes have positive outcomes
-from appearance valuation within the context of an established romantic
-relationship and they experience less SSO after appearance comments
-within romantic relationships (Meltzer, 2020), less is known about first
-dates. But this literature is also only about heterosexual
-relationships. A recent study has investigated the effect of
-self-objectification on the reduction of relationship building skills in
-general (including same-sex friendships) {[}CITE PWQ paper I reviewed,
-Yoder editor{]}. Empirical evidence reveals that objectification
-manifests through inauthenticity in romantic relationships (Brunell et
-al., 2010), adverse attitudes in regard to career aspirations, and a
-decrease in concentration and impairment in female cognitive performance
-(Kahalon, Shnabel, \& Becker, 2018; D. M. Quinn, Chaudoir, \& Kallen,
-2011). Both romantic relationships and relationships in general have
-been studies in the context of objectification, but neither of these
-literatures have investigated specifically same-gender relationships.
+way. Among heterosexual male and female college students, self-
+objectification has been found to be positively associated with the
+extent to which they objectify their romantic partners (Zurbriggen,
+Ramsey, \& Jaworski, 2011). Researchers have also studied interpersonal
+objectification and self-objectification in romantic relationships
+(Strelan \& Pagoudis, 2018). Evidence is mixed, and women can sometimes
+have positive outcomes from appearance valuation within the context of
+an established romantic relationship and they experience less SSO after
+appearance comments within romantic relationships (Meltzer, 2020), less
+is known about first dates. But this literature is also only about
+heterosexual relationships. A recent study has investigated the effect
+of self-objectification on the reduction of relationship building skills
+in general (including same-sex friendships) {[}CITE PWQ paper I
+reviewed, Yoder editor{]}. Empirical evidence reveals that
+objectification manifests through inauthenticity in romantic
+relationships (Brunell et al., 2010), adverse attitudes in regard to
+career aspirations, and a decrease in concentration and impairment in
+female cognitive performance (Kahalon, Shnabel, \& Becker, 2018; D. M.
+Quinn, Chaudoir, \& Kallen, 2011). Both romantic relationships and
+relationships in general have been studies in the context of
+objectification, but neither of these literatures have investigated
+specifically same-gender relationships.
 
 There is evidence that the experience of state self-objectification in
 mixed-gender contexts (stranger and romantic) and within the self in any
@@ -252,7 +272,7 @@ objectify other women (Harsey \& Zurbriggen, 2020; Loughnan et al.,
 self-objectification in the same way men's objectification of women does
 (Garcia et al., 2016)? If so, does the self-objectification experienced
 in these same-gender interactions have the same negative consequences
-for authenticity in that ineraction?
+for authenticity in that interaction?
 
 \subsection{Interpersonal Objectification and
 Authenticity}\label{interpersonal-objectification-and-authenticity}
@@ -260,20 +280,23 @@ Authenticity}\label{interpersonal-objectification-and-authenticity}
 There is some evidence that reduced authenticity is a consequence of
 self-objectification in the moment {[}Garcia et al. (2016); again CITE
 PWQ paper I reviewed, Yoder editor{]}. This link has been justified by
-the literature on stigmatized-stigmatizer interactions, viewing the
-experience of being objectified in an interaction as an identity threat
-situation. When a woman is objectified by a man, and then experiences
-self-objectification, this intergroup encounter might trigger identitiy
-threat, but is the same negative consequence present when a woman is
-objectified by another woman? woman-woman interpersonal objectification
-processes might diverge from this process. One the one hand, she may not
-be having the same negative consequences the cascade from situations
-that threated group-based identity (Deaux \& Major, 1987; Dovidio, Hebl,
-Richeson, \& Shelton, 2006; M. R. Hebl \& Dovidio, 2005), but feeling
-like a body, rather than a full human, in an interaction may be enough
-to reduce feelings of authenticity and social competence, regardless of
-the gender of the objectifyer {[}Tolman, Impett, Tracy, and Michael
-(2006); PWQ paper I reviewed, Yoder editor{]}.
+the literature on stigmatized-stigmatizer interactions (CITE LITERATURE
+DIDN'T COME ACROSS THIS), viewing the experience of being objectified in
+an interaction as an identity threat situation (MAYBE CITE MILES-MCLEAN
+PAPER \enquote{STOP LOOKING AT ME!}). When a woman is objectified by a
+man, and then experiences self-objectification, this intergroup
+encounter might trigger identitiy threat, but is the same negative
+consequence present when a woman is objectified by another woman?
+woman-woman interpersonal objectification processes might diverge from
+this process. One the one hand, she may not be having the same negative
+consequences the cascade from situations that threated group-based
+identity (Deaux \& Major, 1987; Dovidio, Hebl, Richeson, \& Shelton,
+2006; M. R. Hebl \& Dovidio, 2005), but feeling like a body, rather than
+a full human, in an interaction may be enough to reduce feelings of
+authenticity and social competence, regardless of the gender of the
+objectifyer {[}Tolman, Impett, Tracy, and Michael (2006); PWQ paper I
+reviewed, Yoder editor{]}. I DONT KNOW WHERE THIS PAPER IS? ASK RANDI
+ABOUT IDENTITY\_THREAT PAPERS
 
 \subsection{The Current Study}\label{the-current-study}
 
@@ -355,11 +378,34 @@ used is found in Garcia et al. (2016)'s study.
 Data from two different, but demographically equivalent, samples were
 combined to create the final analysis sample (\emph{N =} 64) used in
 this study. In the measures section that follows we refer to them as
-Sample 1 and Sample 2. Sample 1 (\emph{N =} 24) is from a co-ed liberal
-arts college in the northeast US and Sample 2 (\emph{N =} 40) is from a
-women's liberal arts college in the northeast US. The description of the
-samples section below contains more detail about equivalence analyses to
-support the decision to combine these two samples.
+Sample 1 and Sample 2. Thirty-two previously unacquainted
+self-identifying female-sex dyads (64 total participants) from two
+liberal arts institutions in the Northeast of the United States
+participated in this study. Sample 1 (\emph{N =} 24) is from a co-ed
+liberal arts college in the northeast US and Sample 2 (\emph{N =} 40) is
+from a women's liberal arts college in the northeast US. More
+specifically, twelve of the pairs, which derived from Sample 1, were
+students at a co-ed liberal arts college, while the remaining twenty
+pairs who came from Sample 2 attended a women's liberal arts college.
+Initially, data was collected from same-sex and mixed-sex dyads that
+comprised of male and female gendered individuals. Sample 1 originally
+consisted of twenty-two pairs, twelve men and thirty-two women.
+Twenty-three pairs made up of forty-three women and one man, as well as
+two participants who did not identify with either gender category,
+formed Sample 2. For consistency, we limited participant data to same
+sex female pairs at the two colleges.
+
+Due these similarities across samples in regard to correlation patterns
+between significant variables within this study, the two datasets were
+combined. These participants were mostly first-year college students,
+with an average age of 18.85 (SD = 1.04). The sample was 48.44\%
+White/European American, 9.38\% Black/African-American, 28.12\%
+Asian/Pacific Islander, 9.38\% Latinx, and 4.69\% mixed-race. There were
+8 White/White pairs and 4 same race racial minority pairs, for a total
+of 12 same-race pairs. The remaining 20 were mixed race pairs, of which
+15 were White/racial minority pairings and 5 were cross-racial minority
+group pairs. 64.06\% of the sample identified as heterosexual, and 25\%
+identified as gay, lesbian or bisexual.
 
 \subsection{Post interaction Measures}\label{post-interaction-measures}
 
@@ -531,35 +577,6 @@ the 5 physical self-concepts/appearance attributes (e.g., physical
 attractiveness, weight), and all measures were multiplied by -1, as was
 done in Garcia et al. (2016), so that positive scores indicated greater
 TSO.
-
-\subsubsection{Description of the
-Samples}\label{description-of-the-samples}
-
-Thirty-two previously unacquainted self-identifying female-sex dyads (64
-total participants) from two liberal arts institutions in the Northeast
-of the United States participated in this study. More specifically,
-twelve of the pairs, which derived from Sample 1, were students at a
-co-ed liberal arts college, while the remaining twenty pairs who came
-from Sample 2 attended a women's liberal arts college. Initially, data
-was collected from same-sex and mixed-sex dyads that comprised of male
-and female gendered individuals. Sample 1 originally consisted of
-twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs
-made up of forty-three women and one man, as well as two participants
-who did not identify with either gender category, formed Sample 2. For
-consistency, we limited participant data to same sex female pairs at the
-two colleges.
-
-Due these similarities across samples in regard to correlation patterns
-between significant variables within this study, the two datasets were
-combined. These participants were mostly first-year college students,
-with an average age of 18.85 (SD = 1.04). The sample was 48.44\%
-White/European American, 9.38\% Black/African-American, 28.12\%
-Asian/Pacific Islander, 9.38\% Latinx, and 4.69\% mixed-race. There were
-8 White/White pairs and 4 same race racial minority pairs, for a total
-of 12 same-race pairs. The remaining 20 were mixed race pairs, of which
-15 were White/racial minority pairings and 5 were cross-racial minority
-group pairs. 64.06\% of the sample identified as heterosexual, and 25\%
-identified as gay, lesbian or bisexual.
 
 \section{Results}\label{results}
 
@@ -735,6 +752,40 @@ these analyses.
 
 \section{Discussion}\label{discussion}
 
+The current study tested whether the model of interpersonal
+objectification and state self-objectification (SSO) used in Garcia et
+al. (2016) replicates in a same-gender dyadic sample of women only.
+Although past reserach has found that women do objectify other women
+(Harsey \& Zurbriggen, 2020; Loughnan et al., 2015a; Puvia \& Vaes,
+2013), this is the first study to test if this other-objectification by
+women is related to self-objectification in women. As hypothesized, the
+current study did find a significant relationship bewteen a woman's
+partner's report of having objectified her and her own post-interaction
+feelings of self-objectification.
+
+Where the results of the current study diverge most notably from the
+results of studies testing interpersonal objectification among
+mixed-gender dyads is the lack of evidence for relationships between SSO
+and felt inauthenticity (Garcia et al., 2016). In addition, we found to
+evidence of \emph{direct} or \emph{indirect} relationships between SSO
+and cognitive functioning, relationship agency, and career aspirations.
+Nor was there evidence of \emph{direct} or \emph{indirect} relationships
+between other-objectification and any of these outcomes. This is
+somewhat suprising given the extant research on interpersonal
+other-ojectification and cognitive functioning {[}CITE that logel
+study{]}, and the plentiful evidence linking SSO and cognitive
+functioning {[}B. L. Fredrickson et al. (1998); CITE; CITE; CITE{]}.
+This lack of evidence could potentially signal diverging processs
+between women's experiences with interpersonal objectification from men
+and interpersonal objectification from women. There is quite a bit of
+evidence suggesting that the male gaze is particularly detrimental
+{[}CITE; CITE; CITE{]}, and perhaps the self-objectification experienced
+within an interaction with a women is not as detrimental as the
+self-objectificatoin experienced within an interaction with a man. This
+lack of evidence could also be due to the relatively small sample size.
+
+What we did find, however,
+
 As stated previously, we did not find a significant effect between actor
 SSO and actor authenticity, which suggests that there is not sufficient
 evidence to support the claim that partner objectification is the cause
@@ -774,24 +825,26 @@ Directions}\label{limitations-and-future-directions}
 The sample of the current study was comprised of Western women, being
 that sexual objectification is most prevalent in this culture (Loughnan
 et al., 2015b), and research on objectification conducted outside of
-Western or Westernized countries is scarce (Moradi \& Huang, 2008).
-Because \enquote{bodies exist within social and cultural contexts, and
-hence are also constructed through sociocultural practices and
-discourses} (Roberts \& Fredrickson, 1997, p. 174), it is important to
-consider how diverse social identities within unique cultural contexts
-may inform sexual objectification phenomenon to test the cross-cultural
-applicability of theoretical frameworks (Loughnan et al., 2015b).
-Further, sexualzing experiences and self-objectification are thought to
-begin a very young age, and thus, researchers have only recently begun
-to examine such experiences among children (Bury, Tiggemann, \& Slater,
-2016; e.g., Holland \& Haslam, 2016; Jongenelis, Byrne, \& Pettigrew,
-2014). Considering the fact that the average mean age of the
-investigated participants of this current study was 18.85 years,
-research among younger and older individuals is needed, especially
-because self-objectification may change over time (Roberts \&
+Western or Westernized countries is scarce (Moradi \& Huang, 2008),
+although more current work examines objectification from a
+cross-cultural framework (Loughnan et al., 2015b, Wollast et al.
+(2020)). Because \enquote{bodies exist within social and cultural
+contexts, and hence are also constructed through sociocultural practices
+and discourses} (Roberts \& Fredrickson, 1997, p. 174), it is important
+to consider how diverse social identities within unique cultural
+contexts may inform sexual objectification phenomenon to test the
+cross-cultural applicability of theoretical frameworks (Loughnan et al.,
+2015b). Further, sexualizing experiences and self-objectification are
+thought to begin a very young age, and thus, researchers have only
+recently begun to examine such experiences among children (Bury,
+Tiggemann, \& Slater, 2016; e.g., Holland \& Haslam, 2016; Jongenelis,
+Byrne, \& Pettigrew, 2014). Considering the fact that the average mean
+age of the investigated participants of this current study was 18.85
+years, research among younger and older individuals is needed,
+especially because self-objectification may change over time (Roberts \&
 Fredrickson, 1997). It may be valuable to question the extent to which
 children, adolescents, or emerging adults of different races or
-ethnicities are exposed to varied amounts of sexulizing content.
+ethnicities are exposed to varied amounts of sexualizing content.
 
 \subsubsection{Measurement}\label{measurement}
 
@@ -969,6 +1022,12 @@ Review}, \emph{9}(2), 156--182.
 Henry, L., \& Wickham, H. (2019). \emph{Purrr: Functional programming
 tools}. Retrieved from \url{https://CRAN.R-project.org/package=purrr}
 
+\hypertarget{ref-hill2008examining}{}
+Hill, M. S., \& Fischer, A. R. (2008). Examining objectification theory:
+Lesbian and heterosexual women's experiences with sexual-and
+self-objectification. \emph{The Counseling Psychologist}, \emph{36}(5),
+745--776.
+
 \hypertarget{ref-holland2016}{}
 Holland, E., \& Haslam, N. (2016). Cute little things: The
 objectification of prepubescent girls. \emph{Psychology of Women
@@ -1040,6 +1099,13 @@ interpersonal sexual objectification as a source of insidious trauma.
 Moradi, B., \& Huang, Y.-P. (2008). Objectification theory and
 psychology of women: A decade of advances and future directions.
 \emph{Psychology of Women Quarterly}, \emph{32}(4), 377--398.
+
+\hypertarget{ref-morry2001magazine}{}
+Morry, M. M., \& Staska, S. L. (2001). Magazine exposure:
+Internalization, self-objectification, eating attitudes, and body
+satisfaction in male and female university students. \emph{Canadian
+Journal of Behavioural Science/Revue Canadienne Des Sciences Du
+Comportement}, \emph{33}(4), 269.
 
 \hypertarget{ref-R-tibble}{}
 Müller, K., \& Wickham, H. (2019). \emph{Tibble: Simple data frames}.
@@ -1204,6 +1270,12 @@ Wickham, H., Hester, J., \& Francois, R. (2017). \emph{Readr: Read
 rectangular text data}. Retrieved from
 \url{https://CRAN.R-project.org/package=readr}
 
+\hypertarget{ref-wollast2020cultural}{}
+Wollast, R., Riemer, A. R., Gervais, S. J., Grigoryan, L., Bernard, P.,
+\& Klein, O. (2020). How cultural orientation and self-compassion shape
+objectified body consciousness for women from america, belgium, russia,
+and thailand. \emph{Self and Identity}, 1--21.
+
 \hypertarget{ref-R-knitr}{}
 Xie, Y. (2015). \emph{Dynamic documents with R and knitr} (2nd ed.).
 Boca Raton, Florida: Chapman; Hall/CRC. Retrieved from
@@ -1212,6 +1284,12 @@ Boca Raton, Florida: Chapman; Hall/CRC. Retrieved from
 \hypertarget{ref-young1979}{}
 Young, I. M. (1979). \emph{Proceedings of the second sex---Thirty years
 later: A commemorative conference on feminist theory,}
+
+\hypertarget{ref-zurbriggen2011self}{}
+Zurbriggen, E. L., Ramsey, L. R., \& Jaworski, B. K. (2011). Self-and
+partner-objectification in romantic relationships: Associations with
+media consumption and relationship satisfaction. \emph{Sex Roles},
+\emph{64}(7-8), 449--462.
 
 \endgroup
 
